Fixed nav-bar AND footer gap

--- a/main.css
+++ b/main.css
@@ -68,13 +68,10 @@ footer {
     left: 0;
     bottom: 0;
     background-color: rgb(57, 57, 58);
-    margin-bottom: -10px;
-    padding: 0;
 }
 
-#footer-bar div {
-    margin: 0;
-    padding: 0;
+#footer-bar{
+    overflow: hidden;
 }
 
 #footer-bar #left-side-footer {
